# quiz

ants-army/: CMakeLists.txt  README.md  ants.cpp  ants.h  test_ants.cpp
coins/: CMakeLists.txt  coins.cpp  coins.h  main.cpp  test_coins.cpp
coins/cmake/: gtest.cmake
digit_generator/: CMakeLists.txt  README.md  generator.cpp  generator.h  main.cpp  test_generator.cpp
one/: CMakeLists.txt  README.md  main.cpp  one.cpp  one.h  test_one.cpp
reservation/: CMakeLists.txt  main.cpp  reservation.cpp  reservation.h  test_reservation.cpp
shom/: CMakeLists.txt  main.cpp  shom.cpp  shom.h  test_shom.cpp
weight-height/: CMakeLists.txt  big_guy.cpp  big_guy.h  main.cpp  test_big_guy.cpp
